2007-08-17  Lapo Calamandrei <calamandrei@gmail.com>

	* */actions/object* : tweaks.
	* */status/image-missing.* :: new icons since we do not use the slide
		metaphor anymore
	* 32x32/status/appointment-* : missing sizes in.
	* */status/dialog-question.* : one missing icon less.
	* */actions/system-search.* : a try at this one.

2007-08-16  Lapo Calamandrei <calamandrei@gmail.com>

	* */actions/mail-send.* : tweaks and missing sizes.
	* */status/mail-{read,replied}.* : tweals.

2007-08-16  Andreas Nilsson <nisses.mail@home.se>

	* {16x16,22x22,24x24}/actions/mail-send.* : new icons from Hylke Bons.

2007-08-16  Lapo Calamandrei <calamandrei@gmail.com>

	* several mail related icons in all sizes in, mail-signed* still
		missing.

2007-08-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* 22x22/status/Makefile.am: s/passed/past/ for previous commit

2007-08-15  Lapo Calamandrei <calamandrei@gmail.com>

	* */status/media-playlist-* : new icons in (fixes bug #453637).
	* */emotes/face-smirk.* : the last one is in, now we have all the
		naming specs emotes in!
	* */emotes/face-raspberry.* : just a try at this one.
	* {32x32,scalable}/emotes/face-devilish.* : missing sizes added.
	* {32x32,scalable}/emotes/face-kiss.* : missing sizes added.
	* renamed task-passed-due to task-past-due as in naming specs.

2007-08-14  Lapo Calamandrei <calamandrei@gmail.com>

	* first batch of new emotes in, in 16x16, 22x22, 32x32 and scalable, 
		the rest is coming...

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.19.90 for release

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* 24x24/apps/accessories-character-map.png : added missing icon.

2007-08-13  Lapo Calamandrei <calamandrei@gmail.com>
	
	* 24x24/apps/accessories-character-map.png : added missing icon.
	* new media actions icons in all sizes plus various touch-ups here and
		there.

2007-08-03  Andreas Nilsson  <nisses.mail@home.se>

	* accessories-character-map: added, fixes bug #463122
