@@ -6,28 +6,13 @@ subtype=emoticons
 icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)/$(subtype)
 
 icon_DATA =\
-	stock_smiley-1.png \
-	stock_smiley-2.png \
-	stock_smiley-3.png \
-	stock_smiley-4.png \
-	stock_smiley-5.png \
-	stock_smiley-6.png \
-	stock_smiley-7.png \
-	stock_smiley-8.png \
 	stock_smiley-9.png \
-	stock_smiley-10.png \
-	stock_smiley-11.png \
-	stock_smiley-12.png \
-	stock_smiley-13.png \
 	stock_smiley-14.png \
-	stock_smiley-15.png \
 	stock_smiley-16.png \
 	stock_smiley-17.png \
-	stock_smiley-18.png \
 	stock_smiley-19.png \
 	stock_smiley-20.png \
 	stock_smiley-21.png \
-	stock_smiley-22.png \
 	stock_smiley-23.png \
 	stock_smiley-24.png \
 	stock_smiley-25.png \
