@@ -1,3 +1,9 @@
+2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* 16x16/stock/emoticons/stock_smiley-[1-8,10-13,15,18,22]:
+	Removed these smiley icons as they've been replaced with the new
+	face-$emote icons as per the naming spec
+
 2007-08-17  Lapo Calamandrei <calamandrei@gmail.com>
 
 	* */actions/object* : tweaks.
